Fix for ugly track marks on assessment slider on IE

--- a/app/styles/youpers.less
+++ b/app/styles/youpers.less
@@ -509,6 +509,10 @@ input[type=range]::-ms-tooltip {
   display: none;
 }
 
+﻿input[type="range"]::-ms-track {
+  color: transparent;
+}
+
 // gradient hier definiert ohne less, weil elements.less keine gradienten mit 3 Farbpunkten unterstützt.
 input[type="range"] {
   -webkit-appearance: none;
